# SSVM

./: CMakeLists.txt
include/api/: ssvm.h
include/ast/: section.h  segment.h
lib/api/: ssvm.cpp
lib/ast/: section.cpp  segment.cpp
lib/interpreter/: helper.cpp
lib/vm/: vm.cpp
test/aot/: AOTcoreTest.cpp
test/api/: APIStepsCoreTest.cpp  APIUnitTest.cpp  APIVMCoreTest.cpp  CMakeLists.txt  hostfunc_c.c  hostfunc_c.h
test/interpreter/: InterpreterTest.cpp
test/spec/: spectest.cpp  spectest.h
tools/ssvm/: ssvmr.cpp
